--- a/Project2/project2/payload.html
+++ b/Project2/project2/payload.html
@@ -6,18 +6,21 @@
         <link rel="stylesheet" href="media/styles/styles.css">
     </head>
     <body>
-        <nav>
-            <a href="index.html">What happened</a>
-            <a href="about.html">Who are they</a>
-            <a href="charges.html">Charges</a>
-            <a href="motivation.html">Motivation</a>
-            <a href="whatLearned.html">What can be learned</a>
-            <a href="payload.html">Payload</a>
-            <a href="references.html">References</a>
-        </nav>
-
-        <h1>Payload</h1>
-        <p>Johnathan had sent the designs of one of America's most recent and advanced submarines, the Virginia class.  This is a submarine that can run constantly for 33 years without refueling.</p>
-
+        <div class = "grid-container">
+            <nav class="item-1">
+                <a href="index.html">What happened</a>
+                <a href="about.html">Who are they</a>
+                <a href="charges.html">Charges</a>
+                <a href="motivation.html">Motivation</a>
+                <a href="whatLearned.html">What can be learned</a>
+                <a href="payload.html">Payload</a>
+                <a href="references.html">References</a>
+            </nav>
+            <div class="item-2">
+                <h1>Payload</h1>
+                <img src="media/images/virginia-class-sub.jpg" title="virginia class submarine">
+                <p>Johnathan had sent the designs of one of America's most recent and advanced submarines, the Virginia class.  This is a submarine that can run constantly for 33 years without refueling.</p>
+            </div>
+        </div>
     </body>
 </html>
