--- a/Project2/project2/payload.html
+++ b/Project2/project2/payload.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="media/styles/styles.css">
     </head>
     <body>
+        <h1>Report on Johanathan and Diana Toebbe's Espionage</h1>
         <div class = "grid-container">
             <nav class="item-1">
                 <a href="index.html">What happened</a>
@@ -17,10 +18,11 @@
                 <a href="references.html">References</a>
             </nav>
             <div class="item-2">
-                <h1>Payload</h1>
+                <h2>Payload</h2>
                 <img src="media/images/virginia-class-sub.jpg" title="virginia class submarine">
                 <p>Johnathan had sent the designs of one of America's most recent and advanced submarines, the Virginia class.  This is a submarine that can run constantly for 33 years without refueling.</p>
             </div>
         </div>
+        <footer>Published by Avery Belanger: 11/6/2021</footer>
     </body>
 </html>
