--- a/Project2/project2/payload.html
+++ b/Project2/project2/payload.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
-        <link rel="stylesheet" href="media/styles/styles.css">
+        <link rel="stylesheet" href="assets/styles/styles.css">
     </head>
     <body>
         <h1>Report on Johanathan and Diana Toebbe's Espionage</h1>
@@ -19,7 +19,7 @@
             </nav>
             <div class="item-2">
                 <h2>Payload</h2>
-                <img src="media/images/virginia-class-sub.jpg" title="virginia class submarine">
+                <img src="assets/media/virginia-class-sub.jpg" title="virginia class submarine">
                 <p>Johnathan had sent the designs of one of America's most recent and advanced submarines, the Virginia class.  This is a submarine that can run constantly for 33 years without refueling.</p>
             </div>
         </div>
